добавил верхние линии

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<title>pegasus</title>
 </head>
 <body>
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="line col-md-5"></div>
-				<div class="line col-md-5"></div>
-			</div>
+	<header class="header">
+		
+		<div class="top-line">
+			<div class="line"></div>
+			<div class="line"></div>
 		</div>
+
 	</header>
 
 
