--- a/index.html
+++ b/index.html
@@ -6,18 +6,50 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 	<title>pegasus</title>
 </head>
 <body>
-	<header class="header">
-		
 		<div class="top-line">
-			<div class="line"></div>
-			<div class="line"></div>
-		</div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
+		<header class="header">
+			<div class="header-top">
+				
+			<div class="phone">
+					<p><strong>+44 20 7719 8816</strong></p>
+					<p>круглосуточно</p>
+				</div>
+	
+				<div class="phone">
+					<p><strong>+44 777 100 7676</strong></p>
+					<p>viber & whats up</p>
+				</div>
+	
+				<div class="logo">
+					<a href="#"><img src="img/logo.png"></a>
+				</div>
+				
+				<div class="btn-group">
+					<button class="btn">Узнать тариф</button>
+					<button class="btn">Сделать заказ</button>
+				</div>
+			</div>
 
-	</header>
+			<nav class="menu">
+					<ul class="menu-main">
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Услуги</a></li>
+						<li><a href="#">Автопарк</a></li>
+						<li><a href="#">События</a></li>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+			</nav>
+		</header>
+
+
 
 
 
@@ -25,8 +57,8 @@
 	
 	
 		
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 </body>
 </html>
