--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="css/style.css" rel="stylesheet">
 	<title>pegasus</title>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div class="top-line">
 				<div class="line"></div>
 				<div class="line"></div>
@@ -78,7 +79,7 @@
 
 			<div class="row">
 				<div class="col-md-6">
-						<div class="item">
+						<div class="item" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 								<div class="image"><img src="img/1.png" class="img-fluid"></div>
 								<div class="header-text text-center">
 										<h2>elevate you experience</h2>
@@ -96,7 +97,7 @@
 								</div>
 							</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">
 						<div class="image"><img src="img/2.png" class="img-fluid"></div>
 						<div class="header-text text-center">
 								<h2>FARNBOROUGH Airshow 2018</h2>
@@ -116,7 +117,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">
 					<div class="image"><img src="img/3.png" class="img-fluid"></div>
 					<div class="header-text text-center">
 						<h2>regatta in england</h2>
@@ -134,7 +135,7 @@
 					</div>
 				</div>
 				
-				<div class="col-md-6">
+				<div class="col-md-6" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 					<div class="image"><img src="img/4.png" class="img-fluid"></div>
 						<div class="header-text text-center">
 							<h2>silverstone</h2>
@@ -153,7 +154,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">
 					<div class="image"><img src="img/5.png" class="img-fluid"></div>
 					<div class="header-text text-center">
 						<h2>wimbledon</h2>
@@ -170,7 +171,7 @@
 					<button class="button-content">Подробнее</button>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 					<div class="image"><img src="img/6.png" class="img-fluid"></div>
 					<div class="header-text text-center">
 						<h2>regatta in england</h2>
@@ -190,7 +191,7 @@
 			</div>
 		</div>
 	
-		<footer class="foot-cont">
+		<footer class="foot-cont" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="500">
 			<div class="cont-item">
 				<a href="#" class="link">Наши Машины</a>
 				<div class="bottom-line"></div>
@@ -263,8 +264,11 @@
 
 	
 	
-		
-	<script src="js/script.js"></script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>	
+	<!-- <script src="js/script.js"></script> -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
