внес небольшие изменения в адаптив

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="css/style.css" rel="stylesheet">
 	<title>pegasus</title>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body>
 		<div class="top-line">
 				<div class="line"></div>
 				<div class="line"></div>
@@ -18,7 +18,8 @@
 		<header class="header">
 			<div class="header-top">
 				
-			<div class="phone">
+			<div class="phone-group">
+				<div class="phone">
 					<p><strong>+44 20 7719 8816</strong></p>
 					<p>круглосуточно</p>
 				</div>
@@ -27,6 +28,7 @@
 					<p><strong>+44 777 100 7676</strong></p>
 					<p>viber & whats up</p>
 				</div>
+			</div>
 	
 				<div class="logo">
 					<a href="#"><img src="img/logo.png"></a>
